--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     compileOptions {
-            targetCompatibility = "8"
-            sourceCompatibility = "8"
+        targetCompatibility = "8"
+        sourceCompatibility = "8"
     }
 
 
@@ -32,6 +32,7 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -42,6 +43,7 @@ dependencies {
     implementation("com.squareup.okhttp3:logging-interceptor:4.4.0")
     implementation 'com.squareup.okhttp3:okhttp:4.4.0'
 
+    implementation "androidx.cardview:cardview:1.0.0"
 
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.0'
 
