--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+
     implementation 'com.android.support:design:28.0.0'
 }
