--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,6 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.0'
 
     implementation 'com.android.support:design:28.0.0'
+
+    implementation 'id.zelory:compressor:2.1.0'
 }
