--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
 
     implementation 'id.zelory:compressor:2.1.0'
+
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.4.0'
 }
