--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,6 @@ dependencies {
     implementation 'id.zelory:compressor:2.1.0'
 
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.4.0'
+
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.+'
 }
