--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,22 +13,25 @@
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
         android:usesCleartextTraffic="true"
         tools:ignore="LockedOrientationActivity">
-        <activity android:name=".Activities.SelectCropActivity"></activity>
-        <activity android:name=".Activities.RegisterDetailsActivity"></activity>
-        <activity android:name=".Activities.VerifyOTPActivity" />
-        <activity android:name=".Activities.LoginActivity">
+        <activity android:name=".Activities.HomeActivity"></activity>
+        <activity
+            android:name=".Activities.SplashActivity" android:theme="@style/AppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Activities.SelectCropActivity" />
+        <activity android:name=".Activities.RegisterDetailsActivity" />
+        <activity android:name=".Activities.VerifyOTPActivity" />
+        <activity android:name=".Activities.LoginActivity"></activity>
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
 </manifest>
