--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         tools:ignore="LockedOrientationActivity">
         <activity android:name=".Activities.MainActivity" android:screenOrientation="portrait"></activity>
         <activity
-            android:name=".Activities.SplashActivity" android:theme="@style/AppTheme" >
+            android:name=".Activities.SplashActivity" android:theme="@style/AppTheme" android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
