--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,25 +13,38 @@
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
         android:usesCleartextTraffic="true"
         tools:ignore="LockedOrientationActivity">
-        <activity android:name=".Activities.MainActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name=".Activities.ProfileActivity"></activity>
         <activity
-            android:name=".Activities.SplashActivity" android:theme="@style/AppTheme" android:screenOrientation="portrait" >
+            android:name=".Activities.MainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.SplashActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.SelectCropActivity"  android:screenOrientation="portrait"/>
-        <activity android:name=".Activities.RegisterDetailsActivity" android:screenOrientation="portrait" />
-        <activity android:name=".Activities.VerifyOTPActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".Activities.LoginActivity" android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".Activities.SelectCropActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.RegisterDetailsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.VerifyOTPActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activities.LoginActivity"
+            android:screenOrientation="portrait" />
     </application>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
 </manifest>
