--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.4.0'
 
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.+'
+
+    implementation 'com.github.santalu:mask-edittext:1.1.1'
 }
