--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,9 +61,12 @@ dependencies {
 
     implementation 'id.zelory:compressor:2.1.0'
 
+
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.4.0'
 
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.+'
 
     implementation 'com.github.santalu:mask-edittext:1.1.1'
+
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 }
