--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,6 @@ dependencies {
     implementation 'com.github.santalu:mask-edittext:1.1.1'
 
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 }
