--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
         android:usesCleartextTraffic="true"
         tools:ignore="LockedOrientationActivity">
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCepulR-9Z9M5eI_-V6ckqFqdDm_eOlxtA" />
-        <activity android:name="com.farmerapp.Activities.CollectionCentreActivity"></activity>
+        <activity android:name="com.farmerapp.Activities.AboutActivity"></activity>
+
+        <activity android:name="com.farmerapp.Activities.CollectionCentreActivity" />
+
         <activity android:name="com.farmerapp.Activities.PaymentDetailActivity" />
         <activity android:name="com.farmerapp.Activities.SearchActivity" />
         <activity android:name="com.farmerapp.Activities.RequestDetailActivity" />
@@ -50,18 +50,23 @@
         <activity
             android:name="com.farmerapp.Activities.LoginActivity"
             android:screenOrientation="portrait" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCepulR-9Z9M5eI_-V6ckqFqdDm_eOlxtA" />
+
         <receiver android:name="com.farmerapp.Utils.SMSReceiver">
             <intent-filter>
-                <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
     </application>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.READ_SMS"/>
-    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
 </manifest>
